kubernetes/collab/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collab
spec:
  selector:
    matchLabels:
      app: collab
  replicas: 1
  template:
    metadata:
      labels:
        app: collab
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 1.0.0.1
        searches: []
      containers:
        - name: collab
          image: vineelsai/collab-server:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          ports:
            - containerPort: 4000
