kubernetes/collab/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: collab
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.10.114
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app: collab
  ports:
    - port: 4000
      targetPort: 4000
  type: LoadBalancer
